...
    const multisigWalletItem = wallets.find(w => w.type === MultisigHDWallet.type);
    tmpWallets.push({
      wallet: multisigWalletItem,
      title: 'Bitcoin',
      isActivated: true,
      subtitle: loc.wallets.multi_sig_wallet_label,
      testID: 'MultisigWalletRow',
      walletID: multisigWalletItem?.getID?.(),
      onDummyPress: navigateToAddMultisig,
    });

    const onChainWallet = wallets[0];
    tmpWallets.push({
...

    tmpWallets.push({
      wallet: lnWallet,
      title: 'Bitcoin',
      isActivated: true,
      subtitle: loc.wallets.lightning_spark_wallet_label,
      testID: 'LightningWalletRow',
      walletID: lnWallet?.getID?.(),
      onDummyPress: onAddLightningPress,
      isCreatingLightning: (isCreating || isAddingLightning) && !lnWallet,
    });

    return tmpWallets;
...
                </Text>
              </View>
            </TouchableOpacity>
          ) : (
            <View />
          )}
          <TouchableOpacity accessibilityRole="button" testID="Settings" style={styles.walletDetails} onPress={() => navigate('Settings')}>
            <Icon name="more-horiz" type="material" size={22} color="#FFFFFF" />
          </TouchableOpacity>
        </View>
      )}
      <DfxServicesButtons />
      <View style={[styles.list, stylesHook.list]}>
...
          </TouchableOpacity>
        ))}
      </View>
      <FContainer ref={walletActionButtonsRef}>
        {wallet?.allowReceive() && (
          <FButton
            testID="ReceiveButton"
            text={loc.receive.header}
            onPress={onReceiveButtonPressed}
            icon={
              <View style={styles.receiveIcon}>
                <Icon name="arrow-down" size={buttonFontSize} type="font-awesome" color={colors.buttonAlternativeTextColor} />
              </View>
            }
          />
        )}
        <FButton
          testID="HomeScanButton"
          onPress={onScanButtonPressed}
          onLongPress={sendButtonLongPress}
          icon={
            <View style={styles.scanIconContainer}>
              <Image resizeMode="stretch" source={scanImage} />
              <Image style={styles.nfcImage} source={require('../../img/nfc.png')} />
...
