...
        <View style={styles.marginConfirmButton}>
          <BlueButton
            disabled={hasSigned || isConfirmEnabled()}
            title="Sign"
            isLoading={isSignign}
            onPress={onSign}
            testID="PsbtMultisigSignButton"
          />
          <BlueSpacing10 />
          <BlueButton
            disabled={!isConfirmEnabled()}
            isLoading={isBroadcasting}
            title={loc.send.confirm_sendNow}
            onPress={onConfirm}
            testID="PsbtMultisigConfirmButton"
          />
        </View>
      )}
    </SafeBlueArea>
  );
};
...
