...
          chevron
        />
        <BlueListItem
          title={loc.wallets.lightning_spark_wallet_label}
          disabled={!lndWallet}
          onPress={() => navigateToWalletDetails(lndWallet?.getID())}
          testID="WalletDetailsLnd"
          chevron
        />
        <BlueListItem
          title={loc.wallets.multi_sig_wallet_label}
          disabled={!multiDeviceWallet}
          onPress={() => navigateToWalletDetails(multiDeviceWallet?.getID())}
          testID="WalletDetailsMultisig"
          chevron
        />
        {ldsDEV && (
          <BlueListItem
            title={loc.wallets.chf_taproot_wallet_label}
            onPress={() =>
...
