...
                  </View>
                )}
              </View>
              <View style={styles.share}>
                <View style={[styles.customAmount, styleHooks.customAmount]}>
                  <TextInput
                    testID="ReceiveAmountInput"
                    ref={inputAmountRef}
                    placeholderTextColor="#81868e"
                    placeholder="Amount (optional)"
                    style={[styles.customAmountText, styleHooks.customAmountText]}
                    inputAccessoryViewID={BlueDismissKeyboardInputAccessory.InputAccessoryViewID}
                    onBlur={handleOnBlur}
...
                  >
                    <Image source={require('../../img/round-compare-arrows-24-px.png')} />
                  </TouchableOpacity>
                </View>
                <View style={[styles.customAmount, styleHooks.customAmount]}>
                  <TextInput
                    testID="ReceiveDescriptionInput"
                    ref={inputDescriptionRef}
                    onChangeText={setDescription}
                    placeholder={`${loc.receive.details_label} (optional)`}
                    value={description}
                    numberOfLines={1}
                    placeholderTextColor="#81868e"
...
